fix: z-index on table header and divider

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -3859,6 +3859,10 @@ textarea::placeholder {
     border: solid 1px transparent;
 }
 
+.dc__zi-1 {
+    z-index: 1;
+}
+
 .dc__zi-4 {
     z-index: 4;
 }
